move to IncrementalSource from SourceFunction APIs