@@ -17,8 +17,10 @@
 
 package org.apache.flink.cdc.connectors.mongodb.table;
 
+import org.apache.flink.cdc.connectors.base.options.SourceOptions;
 import org.apache.flink.cdc.connectors.base.options.StartupOptions;
-import org.apache.flink.cdc.debezium.DebeziumSourceFunction;
+import org.apache.flink.cdc.connectors.mongodb.internal.MongoDBEnvelope;
+import org.apache.flink.cdc.connectors.mongodb.source.config.MongoDBSourceOptions;
 import org.apache.flink.cdc.debezium.utils.ResolvedSchemaUtils;
 import org.apache.flink.configuration.Configuration;
 import org.apache.flink.table.api.DataTypes;
@@ -31,12 +33,11 @@ import org.apache.flink.table.catalog.ResolvedSchema;
 import org.apache.flink.table.catalog.UniqueConstraint;
 import org.apache.flink.table.connector.source.DynamicTableSource;
 import org.apache.flink.table.connector.source.ScanTableSource;
-import org.apache.flink.table.connector.source.SourceFunctionProvider;
-import org.apache.flink.table.data.RowData;
 import org.apache.flink.table.factories.FactoryUtil;
 import org.apache.flink.table.runtime.connector.source.ScanRuntimeProviderContext;
 
 import org.assertj.core.api.Assertions;
+import org.junit.jupiter.api.Disabled;
 import org.junit.jupiter.api.Test;
 
 import java.time.ZoneId;
@@ -44,26 +45,8 @@ import java.util.ArrayList;
 import java.util.Arrays;
 import java.util.Collections;
 import java.util.HashMap;
+import java.util.List;
 import java.util.Map;
-
-import static org.apache.flink.cdc.connectors.base.options.SourceOptions.CHUNK_META_GROUP_SIZE;
-import static org.apache.flink.cdc.connectors.base.options.SourceOptions.SCAN_INCREMENTAL_CLOSE_IDLE_READER_ENABLED;
-import static org.apache.flink.cdc.connectors.base.options.SourceOptions.SCAN_INCREMENTAL_SNAPSHOT_BACKFILL_SKIP;
-import static org.apache.flink.cdc.connectors.base.options.SourceOptions.SCAN_INCREMENTAL_SNAPSHOT_UNBOUNDED_CHUNK_FIRST_ENABLED;
-import static org.apache.flink.cdc.connectors.base.options.SourceOptions.SCAN_NEWLY_ADDED_TABLE_ENABLED;
-import static org.apache.flink.cdc.connectors.mongodb.internal.MongoDBEnvelope.MONGODB_SRV_SCHEME;
-import static org.apache.flink.cdc.connectors.mongodb.source.config.MongoDBSourceOptions.BATCH_SIZE;
-import static org.apache.flink.cdc.connectors.mongodb.source.config.MongoDBSourceOptions.FULL_DOCUMENT_PRE_POST_IMAGE;
-import static org.apache.flink.cdc.connectors.mongodb.source.config.MongoDBSourceOptions.HEARTBEAT_INTERVAL_MILLIS;
-import static org.apache.flink.cdc.connectors.mongodb.source.config.MongoDBSourceOptions.POLL_AWAIT_TIME_MILLIS;
-import static org.apache.flink.cdc.connectors.mongodb.source.config.MongoDBSourceOptions.POLL_MAX_BATCH_SIZE;
-import static org.apache.flink.cdc.connectors.mongodb.source.config.MongoDBSourceOptions.SCAN_INCREMENTAL_SNAPSHOT_CHUNK_SAMPLES;
-import static org.apache.flink.cdc.connectors.mongodb.source.config.MongoDBSourceOptions.SCAN_INCREMENTAL_SNAPSHOT_CHUNK_SIZE_MB;
-import static org.apache.flink.cdc.connectors.mongodb.source.config.MongoDBSourceOptions.SCAN_INCREMENTAL_SNAPSHOT_ENABLED;
-import static org.apache.flink.cdc.connectors.mongodb.source.config.MongoDBSourceOptions.SCAN_NO_CURSOR_TIMEOUT;
-import static org.apache.flink.cdc.connectors.mongodb.source.config.MongoDBSourceOptions.SCHEME;
-import static org.apache.flink.cdc.connectors.utils.AssertUtils.assertProducedTypeOfSourceFunction;
-import static org.assertj.core.api.Assertions.assertThatThrownBy;
 
 /** Test for {@link MongoDBTableSource} created by {@link MongoDBTableSourceFactory}. */
 class MongoDBTableFactoryTest {
@@ -76,7 +59,7 @@ class MongoDBTableFactoryTest {
                             Column.physical("ddd", DataTypes.DECIMAL(31, 18)),
                             Column.physical("eee", DataTypes.TIMESTAMP(3))),
                     Collections.emptyList(),
-                    UniqueConstraint.primaryKey("pk", Arrays.asList("_id")));
+                    UniqueConstraint.primaryKey("pk", List.of("_id")));
 
     private static final ResolvedSchema SCHEMA_WITH_METADATA =
             new ResolvedSchema(
@@ -99,31 +82,32 @@ class MongoDBTableFactoryTest {
     private static final String MY_DATABASE = "myDB";
     private static final String MY_TABLE = "myTable";
     private static final ZoneId LOCAL_TIME_ZONE = ZoneId.systemDefault();
-    private static final int BATCH_SIZE_DEFAULT = BATCH_SIZE.defaultValue();
-    private static final int POLL_MAX_BATCH_SIZE_DEFAULT = POLL_MAX_BATCH_SIZE.defaultValue();
-    private static final int POLL_AWAIT_TIME_MILLIS_DEFAULT = POLL_AWAIT_TIME_MILLIS.defaultValue();
+    private static final int BATCH_SIZE_DEFAULT = MongoDBSourceOptions.BATCH_SIZE.defaultValue();
+    private static final int POLL_MAX_BATCH_SIZE_DEFAULT =
+            MongoDBSourceOptions.POLL_MAX_BATCH_SIZE.defaultValue();
+    private static final int POLL_AWAIT_TIME_MILLIS_DEFAULT =
+            MongoDBSourceOptions.POLL_AWAIT_TIME_MILLIS.defaultValue();
     private static final int HEARTBEAT_INTERVAL_MILLIS_DEFAULT =
-            HEARTBEAT_INTERVAL_MILLIS.defaultValue();
-    private static final boolean SCAN_INCREMENTAL_SNAPSHOT_ENABLED_DEFAULT =
-            SCAN_INCREMENTAL_SNAPSHOT_ENABLED.defaultValue();
+            MongoDBSourceOptions.HEARTBEAT_INTERVAL_MILLIS.defaultValue();
     private static final int SCAN_INCREMENTAL_SNAPSHOT_CHUNK_SIZE_MB_DEFAULT =
-            SCAN_INCREMENTAL_SNAPSHOT_CHUNK_SIZE_MB.defaultValue();
+            MongoDBSourceOptions.SCAN_INCREMENTAL_SNAPSHOT_CHUNK_SIZE_MB.defaultValue();
     private static final int SCAN_INCREMENTAL_SNAPSHOT_CHUNK_SAMPLES_DEFAULT =
-            SCAN_INCREMENTAL_SNAPSHOT_CHUNK_SAMPLES.defaultValue();
-    private static final int CHUNK_META_GROUP_SIZE_DEFAULT = CHUNK_META_GROUP_SIZE.defaultValue();
+            MongoDBSourceOptions.SCAN_INCREMENTAL_SNAPSHOT_CHUNK_SAMPLES.defaultValue();
+    private static final int CHUNK_META_GROUP_SIZE_DEFAULT =
+            SourceOptions.CHUNK_META_GROUP_SIZE.defaultValue();
     private static final boolean SCAN_INCREMENTAL_CLOSE_IDLE_READER_ENABLED_DEFAULT =
-            SCAN_INCREMENTAL_CLOSE_IDLE_READER_ENABLED.defaultValue();
+            SourceOptions.SCAN_INCREMENTAL_CLOSE_IDLE_READER_ENABLED.defaultValue();
 
     private static final boolean FULL_DOCUMENT_PRE_POST_IMAGE_ENABLED_DEFAULT =
-            FULL_DOCUMENT_PRE_POST_IMAGE.defaultValue();
+            MongoDBSourceOptions.FULL_DOCUMENT_PRE_POST_IMAGE.defaultValue();
 
     private static final boolean SCAN_NO_CURSOR_TIMEOUT_DEFAULT =
-            SCAN_NO_CURSOR_TIMEOUT.defaultValue();
+            MongoDBSourceOptions.SCAN_NO_CURSOR_TIMEOUT.defaultValue();
     private static final boolean SCAN_INCREMENTAL_SNAPSHOT_BACKFILL_SKIP_DEFAULT =
-            SCAN_INCREMENTAL_SNAPSHOT_BACKFILL_SKIP.defaultValue();
+            SourceOptions.SCAN_INCREMENTAL_SNAPSHOT_BACKFILL_SKIP.defaultValue();
 
     private static final boolean SCAN_NEWLY_ADDED_TABLE_ENABLED_DEFAULT =
-            SCAN_NEWLY_ADDED_TABLE_ENABLED.defaultValue();
+            SourceOptions.SCAN_NEWLY_ADDED_TABLE_ENABLED.defaultValue();
 
     @Test
     void testCommonProperties() {
@@ -134,7 +118,7 @@ class MongoDBTableFactoryTest {
         MongoDBTableSource expectedSource =
                 new MongoDBTableSource(
                         SCHEMA,
-                        SCHEME.defaultValue(),
+                        MongoDBSourceOptions.SCHEME.defaultValue(),
                         MY_HOSTS,
                         USER,
                         PASSWORD,
@@ -150,7 +134,6 @@ class MongoDBTableFactoryTest {
                         POLL_AWAIT_TIME_MILLIS_DEFAULT,
                         HEARTBEAT_INTERVAL_MILLIS_DEFAULT,
                         LOCAL_TIME_ZONE,
-                        SCAN_INCREMENTAL_SNAPSHOT_ENABLED_DEFAULT,
                         CHUNK_META_GROUP_SIZE_DEFAULT,
                         SCAN_INCREMENTAL_SNAPSHOT_CHUNK_SIZE_MB_DEFAULT,
                         SCAN_INCREMENTAL_SNAPSHOT_CHUNK_SAMPLES_DEFAULT,
@@ -159,14 +142,15 @@ class MongoDBTableFactoryTest {
                         SCAN_NO_CURSOR_TIMEOUT_DEFAULT,
                         SCAN_INCREMENTAL_SNAPSHOT_BACKFILL_SKIP_DEFAULT,
                         SCAN_NEWLY_ADDED_TABLE_ENABLED_DEFAULT,
-                        SCAN_INCREMENTAL_SNAPSHOT_UNBOUNDED_CHUNK_FIRST_ENABLED.defaultValue());
+                        SourceOptions.SCAN_INCREMENTAL_SNAPSHOT_UNBOUNDED_CHUNK_FIRST_ENABLED
+                                .defaultValue());
         Assertions.assertThat(actualSource).isEqualTo(expectedSource);
     }
 
     @Test
     void testOptionalProperties() {
         Map<String, String> options = getAllOptions();
-        options.put("scheme", MONGODB_SRV_SCHEME);
+        options.put("scheme", MongoDBEnvelope.MONGODB_SRV_SCHEME);
         options.put("connection.options", "replicaSet=test&connectTimeoutMS=300000");
         options.put("scan.startup.mode", "timestamp");
         options.put("scan.startup.timestamp-millis", "1667232000000");
@@ -190,7 +174,7 @@ class MongoDBTableFactoryTest {
         MongoDBTableSource expectedSource =
                 new MongoDBTableSource(
                         SCHEMA,
-                        MONGODB_SRV_SCHEME,
+                        MongoDBEnvelope.MONGODB_SRV_SCHEME,
                         MY_HOSTS,
                         USER,
                         PASSWORD,
@@ -206,7 +190,6 @@ class MongoDBTableFactoryTest {
                         103,
                         104,
                         LOCAL_TIME_ZONE,
-                        true,
                         1001,
                         10,
                         10,
@@ -234,7 +217,7 @@ class MongoDBTableFactoryTest {
         MongoDBTableSource expectedSource =
                 new MongoDBTableSource(
                         ResolvedSchemaUtils.getPhysicalSchema(SCHEMA_WITH_METADATA),
-                        SCHEME.defaultValue(),
+                        MongoDBSourceOptions.SCHEME.defaultValue(),
                         MY_HOSTS,
                         USER,
                         PASSWORD,
@@ -250,7 +233,6 @@ class MongoDBTableFactoryTest {
                         POLL_AWAIT_TIME_MILLIS_DEFAULT,
                         HEARTBEAT_INTERVAL_MILLIS_DEFAULT,
                         LOCAL_TIME_ZONE,
-                        SCAN_INCREMENTAL_SNAPSHOT_ENABLED_DEFAULT,
                         CHUNK_META_GROUP_SIZE_DEFAULT,
                         SCAN_INCREMENTAL_SNAPSHOT_CHUNK_SIZE_MB_DEFAULT,
                         SCAN_INCREMENTAL_SNAPSHOT_CHUNK_SAMPLES_DEFAULT,
@@ -259,7 +241,8 @@ class MongoDBTableFactoryTest {
                         SCAN_NO_CURSOR_TIMEOUT_DEFAULT,
                         SCAN_INCREMENTAL_SNAPSHOT_BACKFILL_SKIP_DEFAULT,
                         SCAN_NEWLY_ADDED_TABLE_ENABLED_DEFAULT,
-                        SCAN_INCREMENTAL_SNAPSHOT_UNBOUNDED_CHUNK_FIRST_ENABLED.defaultValue());
+                        SourceOptions.SCAN_INCREMENTAL_SNAPSHOT_UNBOUNDED_CHUNK_FIRST_ENABLED
+                                .defaultValue());
 
         expectedSource.producedDataType = SCHEMA_WITH_METADATA.toSourceRowDataType();
         expectedSource.metadataKeys = Arrays.asList("op_ts", "database_name", "row_kind");
@@ -268,10 +251,11 @@ class MongoDBTableFactoryTest {
 
         ScanTableSource.ScanRuntimeProvider provider =
                 mongoDBSource.getScanRuntimeProvider(ScanRuntimeProviderContext.INSTANCE);
-        DebeziumSourceFunction<RowData> debeziumSourceFunction =
+        // TODO probably a removable test
+        /*DebeziumSourceFunction<RowData> debeziumSourceFunction =
                 (DebeziumSourceFunction<RowData>)
                         ((SourceFunctionProvider) provider).createSourceFunction();
-        assertProducedTypeOfSourceFunction(debeziumSourceFunction, expectedSource.producedDataType);
+        assertProducedTypeOfSourceFunction(debeziumSourceFunction, expectedSource.producedDataType);*/
     }
 
     @Test
@@ -289,7 +273,7 @@ class MongoDBTableFactoryTest {
     @Test
     public void testCopyExistingPipelineConflictWithIncrementalSnapshotMode() {
         // test with 'initial.snapshotting.pipeline' configuration
-        assertThatThrownBy(
+        Assertions.assertThatThrownBy(
                         () -> {
                             Map<String, String> properties = getAllOptions();
                             properties.put("scan.incremental.snapshot.enabled", "true");
@@ -305,7 +289,7 @@ class MongoDBTableFactoryTest {
                                 + "Debezium mode, not incremental snapshot mode");
 
         // test with 'initial.snapshotting.max.threads' configuration
-        assertThatThrownBy(
+        Assertions.assertThatThrownBy(
                         () -> {
                             Map<String, String> properties = getAllOptions();
                             properties.put("scan.incremental.snapshot.enabled", "true");
@@ -319,7 +303,7 @@ class MongoDBTableFactoryTest {
                                 + "Debezium mode, not incremental snapshot mode");
 
         // test with 'initial.snapshotting.queue.size' configuration
-        assertThatThrownBy(
+        Assertions.assertThatThrownBy(
                         () -> {
                             Map<String, String> properties = getAllOptions();
                             properties.put("scan.incremental.snapshot.enabled", "true");
@@ -334,6 +318,7 @@ class MongoDBTableFactoryTest {
     }
 
     @Test
+    @Disabled // TODO tests against the non-parallel source read
     public void testCopyExistingPipelineInDebeziumMode() {
         Map<String, String> properties = getAllOptions();
         properties.put("scan.incremental.snapshot.enabled", "false");
@@ -345,7 +330,7 @@ class MongoDBTableFactoryTest {
         MongoDBTableSource expectedSource =
                 new MongoDBTableSource(
                         SCHEMA,
-                        SCHEME.defaultValue(),
+                        MongoDBSourceOptions.SCHEME.defaultValue(),
                         MY_HOSTS,
                         USER,
                         PASSWORD,
@@ -361,7 +346,6 @@ class MongoDBTableFactoryTest {
                         POLL_AWAIT_TIME_MILLIS_DEFAULT,
                         HEARTBEAT_INTERVAL_MILLIS_DEFAULT,
                         LOCAL_TIME_ZONE,
-                        false,
                         CHUNK_META_GROUP_SIZE_DEFAULT,
                         SCAN_INCREMENTAL_SNAPSHOT_CHUNK_SIZE_MB_DEFAULT,
                         SCAN_INCREMENTAL_SNAPSHOT_CHUNK_SAMPLES_DEFAULT,
@@ -370,7 +354,8 @@ class MongoDBTableFactoryTest {
                         SCAN_NO_CURSOR_TIMEOUT_DEFAULT,
                         SCAN_INCREMENTAL_SNAPSHOT_BACKFILL_SKIP_DEFAULT,
                         SCAN_NEWLY_ADDED_TABLE_ENABLED_DEFAULT,
-                        SCAN_INCREMENTAL_SNAPSHOT_UNBOUNDED_CHUNK_FIRST_ENABLED.defaultValue());
+                        SourceOptions.SCAN_INCREMENTAL_SNAPSHOT_UNBOUNDED_CHUNK_FIRST_ENABLED
+                                .defaultValue());
         Assertions.assertThat(actualSource).isEqualTo(expectedSource);
     }
 
@@ -387,16 +372,18 @@ class MongoDBTableFactoryTest {
 
     private static DynamicTableSource createTableSource(
             ResolvedSchema schema, Map<String, String> options) {
-        return FactoryUtil.createTableSource(
+        return FactoryUtil.createDynamicTableSource(
                 null,
                 ObjectIdentifier.of("default", "default", "t1"),
                 new ResolvedCatalogTable(
-                        CatalogTable.of(
-                                Schema.newBuilder().fromResolvedSchema(schema).build(),
-                                "mock source",
-                                new ArrayList<>(),
-                                options),
+                        CatalogTable.newBuilder()
+                                .schema(Schema.newBuilder().fromResolvedSchema(schema).build())
+                                .comment("mock source")
+                                .partitionKeys(new ArrayList<>())
+                                .options(options)
+                                .build(),
                         schema),
+                new HashMap<>(),
                 new Configuration(),
                 MongoDBTableFactoryTest.class.getClassLoader(),
                 false);
